==> RT-Thread/rt-thread/bsp/gd32/arm/libraries/gd32_drivers/drv_usartX.c <==
#include <gd32f4xx.h>
#include <drv_usartX.h>
#include <board.h>

static rt_err_t gd32_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    usart_baudrate_set(uart->uart_periph, cfg->baud_rate);

    switch (cfg->data_bits)
    {
    case DATA_BITS_9:
        usart_word_length_set(uart->uart_periph, USART_WL_9BIT);
    break;

    default:
        usart_word_length_set(uart->uart_periph, USART_WL_8BIT);
    break;
    }

    switch (cfg->stop_bits)
    {
    case STOP_BITS_2:
        usart_stop_bit_set(uart->uart_periph, USART_STB_2BIT);
    break;
    default:
        usart_stop_bit_set(uart->uart_periph, USART_STB_1BIT);
    break;
    }

    switch (cfg->parity)
    {
    case PARITY_ODD:
        usart_parity_config(uart->uart_periph, USART_PM_ODD);
    break;
    case PARITY_EVEN:
        usart_parity_config(uart->uart_periph, USART_PM_EVEN);
    break;
    default:
        usart_parity_config(uart->uart_periph, USART_PM_NONE);
    break;
    }

    return RT_EOK;
}

static rt_err_t gd32_init(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    gd32_uart_gpio_init(uart);

    if (gd32_configure(serial, &serial->config) != RT_EOK)
    {
        return -RT_ERROR;
    }

    usart_receive_config(uart->uart_periph, USART_RECEIVE_ENABLE);
    usart_transmit_config(uart->uart_periph, USART_TRANSMIT_ENABLE);

    return RT_EOK;
}

static rt_err_t gd32_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    struct gd32_uart *uart;
    rt_ubase_t ctrl_arg = (rt_ubase_t)arg;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct gd32_uart, serial);

    switch (cmd) {
    case RT_DEVICE_CTRL_OPEN:
        usart_interrupt_disable(uart->uart_periph, USART_INT_TBE);
        usart_interrupt_disable(uart->uart_periph, USART_INT_TC);
        usart_flag_clear(uart->uart_periph, USART_FLAG_RBNE);
        usart_flag_clear(uart->uart_periph, USART_FLAG_TBE);
        usart_flag_clear(uart->uart_periph, USART_FLAG_TC);
        /* enable rx irq */
        NVIC_SetPriority(uart->uart_config.irqn, 0);
        NVIC_EnableIRQ(uart->uart_config.irqn);
        usart_enable(uart->uart_periph);
#ifdef RT_SERIAL_USING_DMA
        uart->dmaTxing = RT_FALSE;
#endif
    break;
    case RT_DEVICE_CTRL_CLOSE:
        NVIC_DisableIRQ(uart->uart_config.irqn);
        usart_interrupt_disable(uart->uart_periph, USART_INT_RBNE);
        usart_interrupt_disable(uart->uart_periph, USART_INT_TBE);
        usart_interrupt_disable(uart->uart_periph, USART_INT_IDLE);
        usart_interrupt_disable(uart->uart_periph, USART_INT_TC);
        usart_disable(uart->uart_periph);
        usart_deinit(uart->uart_periph);
#ifdef RT_SERIAL_USING_DMA
        NVIC_DisableIRQ(uart->dma_rx.dma_irq);
        dma_interrupt_disable(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel, DMA_CHXCTL_HTFIE);
        dma_interrupt_disable(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel, DMA_CHXCTL_FTFIE);
        dma_channel_disable(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel);
        dma_deinit(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel);

        NVIC_DisableIRQ(uart->dma_tx.dma_irq);
        dma_interrupt_disable(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel, DMA_CHXCTL_FTFIE);
        dma_channel_disable(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel);
        dma_deinit(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel);
#endif
    break;
    case RT_DEVICE_CTRL_CLR_INT:
        /* disable interrupt */
        if (ctrl_arg & RT_DEVICE_FLAG_INT_RX) {
            usart_interrupt_disable(uart->uart_periph, USART_INT_RBNE);
        }
#ifdef RT_SERIAL_USING_DMA
        /* disable DMA */
        if (ctrl_arg & RT_DEVICE_FLAG_DMA_RX) {
            NVIC_DisableIRQ(uart->dma_rx.dma_irq);
            dma_interrupt_disable(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel, DMA_CHXCTL_HTFIE);
            dma_interrupt_disable(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel, DMA_CHXCTL_FTFIE);
        }
        if(ctrl_arg & RT_DEVICE_FLAG_DMA_TX) {
            NVIC_DisableIRQ(uart->dma_tx.dma_irq);
            dma_interrupt_disable(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel, DMA_CHXCTL_FTFIE);
        }
#endif
    break;
    case RT_DEVICE_CTRL_SET_INT:
        /* enable interrupt */
        if (ctrl_arg & RT_DEVICE_FLAG_INT_RX) {
            usart_interrupt_enable(uart->uart_periph, USART_INT_RBNE);
        }
    break;
    /* USART config */
    case RT_DEVICE_CTRL_CONFIG :
#ifdef RT_SERIAL_USING_DMA
        if (ctrl_arg & RT_DEVICE_FLAG_DMA_RX) {
            DMA_RX_Configuration(serial);
        } else if (ctrl_arg & RT_DEVICE_FLAG_DMA_TX) {
            DMA_TX_Configuration(serial);
        }
#endif
    break;
    default :
    break;
    }

    return RT_EOK;
}

static int gd32_putc(struct rt_serial_device *serial, char ch)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct gd32_uart, serial);

    while((usart_flag_get(uart->uart_periph, USART_FLAG_TBE) == RESET));
    usart_data_transmit(uart->uart_periph, ch);

    return 1;
}

static int gd32_getc(struct rt_serial_device *serial)
{
    int ch;
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct gd32_uart, serial);

    ch = -1;
    if (usart_flag_get(uart->uart_periph, USART_FLAG_RBNE) != RESET) {
        ch = usart_data_receive(uart->uart_periph);
    }
    return ch;
}

static int gd32_flush(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);
    while (!(usart_flag_get(uart->uart_periph, USART_FLAG_TBE) == SET && usart_flag_get(uart->uart_periph, USART_FLAG_TC) == SET));

    return 1;
}

static void gd32_start_tx(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);
    usart_interrupt_enable(uart->uart_periph, USART_INT_TBE);
}

static void gd32_stop_tx(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);
    usart_interrupt_disable(uart->uart_periph, USART_INT_TBE);
}

static rt_bool_t gd32_is_dma_txing(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    return uart->dmaTxing;  //RT_FALSE;
}

static void gd32_start_dma_tx(struct rt_serial_device *serial, rt_uint8_t *buf, rt_size_t size)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    // TODO: 启用 DMA 发送
    DMA_CHM0ADDR(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel) = (uint32_t)(buf);
    DMA_CHCNT(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel) = (uint32_t)(size);
    dma_channel_enable(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel);

    uart->dmaTxing = RT_TRUE;
}

static void gd32_stop_dma_tx(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    // TODO: 禁用 DMA 发送
    dma_channel_disable(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel);
    uart->dmaTxing = RT_FALSE;
}

static void gd32_enable_interrupt(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    NVIC_EnableIRQ(uart->uart_config.irqn);
}

static void gd32_disable_interrupt(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    NVIC_DisableIRQ(uart->uart_config.irqn);
}

static void uart_isr(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;
#ifdef RT_SERIAL_USING_DMA
    rt_size_t dma_cnt;
#endif

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    /* UART in mode Receiver -------------------------------------------------*/
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_RBNE) != RESET))
    {
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_IND);
        /* Clear RXNE interrupt flag */
        usart_interrupt_flag_clear(uart->uart_periph, USART_INT_FLAG_RBNE);
    }
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_RBNE_ORERR) != RESET))
    {
        usart_data_receive(uart->uart_periph);
    }
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_TBE) != RESET))
    {
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_TX_DONE);
        usart_interrupt_flag_clear(uart->uart_periph, USART_INT_FLAG_TBE);
    }
#ifdef RT_SERIAL_USING_DMA
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_IDLE) != RESET))
    {
        usart_data_receive(uart->uart_periph);
        dma_cnt = RT_SERIAL_DMA_BUFSZ - DMA_CHCNT(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel);
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_DMADONE | (dma_cnt << 8));
    }
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_TC) != RESET))
    {
        usart_interrupt_flag_clear(uart->uart_periph, USART_INT_FLAG_TC);
    }
#endif
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_PERR) != RESET))
    {
        usart_data_receive(uart->uart_periph);
    }
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_EB) != RESET))
    {
        usart_interrupt_flag_clear(uart->uart_periph, USART_INT_FLAG_EB);
    }
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_RT) != RESET))
    {
        usart_interrupt_flag_clear(uart->uart_periph, USART_INT_FLAG_RT);
    }
}
